# sciprog-python

./: LICENSE  README.md  jupyter-lite.json  requirements.txt
.github/workflows/: deploy.yml
api/contents/: all.json
files/: environment.yml  index.md  task.md
files/CLI/: argparse_example.py  logging_example.py  somelib.py
files/IO/: 01.IO.ipynb  02.HDF5.ipynb  03.PickleDatabase.ipynb  04.Database.ipynb  05.ROOT.ipynb  06.Protobuf.ipynb  07.ZIP.py  08.MemoryMapping.ipynb  CMakeLists.txt  dwyer2003.gdml  example.proto  filename.py  proto_main.cpp  struct.cpp
files/Networking/: 01.Plotly.ipynb  UDP_client.py  UDP_server.py  http_dynamic.py
files/USB/: 01.USB.ipynb  USB.py  usb-ftdi.dio
files/content/: index.md
files/device_control/: 01.Device.ipynb  02.Device.ipynb  arch.dio
files/format/: json.py  json_.py  test.json
files/general_overview/: 01.Translators.ipynb  02.Lexical.ipynb  03.DataModel.ipynb  04.InvoketionAndLoading.ipynb  05.Functional.ipynb  05.OOP.ipynb  06.Numpy.ipynb  07.collections.ipynb  DataModel.ipynb  ScopesAndNamespace.ipynb  mypy_example.py  simple_animals.py
files/native_extensions/: 01.NativeExtensions.ipynb  02.GEANT4.ipynb  03.Numba.ipynb  Jamfile  Makefile  boost_mandelbrot.py  cffi_builder.py  cffi_run.py  count_pi.C  ctypes_mandelbrot.py  cython_example_c.pyx  cython_example_py.py  libmandelbrot.c  libmandelbrot.cpp  libmandelbrot.h  libmandelbrot.i  mandelbrot.py  setup.py  swig_mandelbrot.py
files/papers/: habr_magic_method_tutorial.html
files/plot/: 01.Matplotlib.ipynb
files/threading/: 01.Threading.ipynb  (+7 more)
(+53 files in other folders)
